# endiannezz

./: Cargo.toml  README.md
.github/workflows/: main.yml
derive/: Cargo.toml
derive/src/: attr.rs  fields.rs  io.rs  lib.rs
derive/src/attr/: endian.rs  mod.rs
endiannezz_derive/src/: fields.rs
src/: ext.rs  internal.rs  lib.rs
tests/: 01-basic.rs  progress.rs  tests.rs
tests/derive/: mod.rs
tests/derive/enums/: mod.rs  unit_enum.rs
tests/derive/enums/nightly/: mod.rs  regular_enums.rs  tuple_enums.rs
tests/derive/structs/: header_struct.rs  mod.rs  regular_struct.rs  tuple_struct.rs  unit_struct.rs
tests/derive/structs/nightly/: header_struct.rs  mod.rs
tests/failed/: 02-attr-not-specified.rs  02-attr-not-specified.stderr  03-expected-attr-args.stderr  03-unsupported-attr.rs  03-unsupported-attr.stderr  04-excepted-endian-identifier.rs  04-excepted-endian-identifier.stderr  04-excepted-endian.stderr  05-invalid-endian.rs  05-invalid-endian.stderr  06-no-sense.rs  06-no-sense.stderr  07-duplicated-attr.rs  07-duplicated-attr.stderr  08-missing-repr.rs  08-missing-repr.stderr  09-unsupported-repr.rs  09-unsupported-repr.stderr  10-explicit-discriminant.rs  10-explicit-discriminant.stderr
tests/success/: issue6.rs
