[package]
name = "endiannezz"
version = "0.3.0"
authors = ["Frago9876543210"]
edition = "2018"
license = "MIT"
description = "Zero dependencies library for I/O endianness on high-level"
repository = "https://github.com/Frago9876543210/endiannezz"
documentation = "https://docs.rs/endiannezz"
keywords = ["endian", "endianness", "binary", "little-endian", "big-endian"]
categories = ["encoding", "parsing", "rust-patterns"]
readme = "README.md"

[features]
default = ["inline_primitives"]

#Usually, inlining of primitives make sense. Turn it off if you don't think so.
inline_primitives = []
#NOTE: It may increase size of binary is some cases.
inline_io = []
