[package]
name = "endiannezz"
version = "0.6.5"
authors = ["Frago9876543210"]
edition = "2018"
license = "MIT"
description = "Zero dependencies library for I/O endianness on high-level"
repository = "https://github.com/Frago9876543210/endiannezz"
documentation = "https://docs.rs/endiannezz"
keywords = ["endian", "endianness", "binary", "little-endian", "big-endian"]
categories = ["encoding", "parsing", "rust-patterns"]
readme = "README.md"

[dev-dependencies]
automod = "0.2"
trybuild = { version = "1.0", features = ["diff"] }

[build-dependencies]
rustversion = "1.0"

[dependencies]
endiannezz_derive = { version = "=0.2.2", path = "derive", optional = true }

[features]
default = ["inline_primitives", "derive"]

#Provide derive(Io) proc macro
derive = ["endiannezz_derive"]
#Usually, inlining of primitives make sense. Turn it off if you don't think so.
inline_primitives = []
#NOTE: It may increase size of binary is some cases.
inline_io = []
#C-like bool: 0 - false, else - true
unchecked_bool = []
